Fix search field on iOS

--- a/src/sass/components/_input.scss
+++ b/src/sass/components/_input.scss
@@ -7,6 +7,9 @@
     font-size: $font-size-base;
     padding: 8px 10px;
     outline: none;
+    // ios
+    border-radius: 0;
+    -webkit-appearance: none;
 }
 
 .input-text-error {
